labs/21-network-segmentation/files/deny-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
spec:
  podSelector:
    matchLabels: {role: allowed}
  policyTypes: [Egress]
